Fixed payment API issue

--- a/ECommerce.Host/appsettings.json
+++ b/ECommerce.Host/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=eCommerceAppDb;Integrated Security=True"
+  },
+
+  "Jwt": {
+    "Key": "ThisIsASecretKeyForJwtAuthentication12345!",
+    "Issuer": "https://localhost:44353/",
+    "Audience": "https://localhost:44353/"
+  },
+  "Stripe": {
+    "SecretKey": ""
   }
+
 }
