--- a/ECommerce.Infrastructure/ECommerce.Infrastructure.csproj
+++ b/ECommerce.Infrastructure/ECommerce.Infrastructure.csproj
@@ -1,25 +1,45 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+		<PropertyGroup>
+				<TargetFramework>net8.0</TargetFramework>
+				<ImplicitUsings>enable</ImplicitUsings>
+				<Nullable>enable</Nullable>
+		</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="12.0.1" />
-    <PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer" Version="8.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.20" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.20" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.20">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
+		<ItemGroup>
+				<!-- Entity Framework Core -->
+				<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.20" />
+				<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.20" />
+				<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.20" />
 
-  <ItemGroup>
-    <ProjectReference Include="..\ECommerceApp.Application\ECommerceApp.Application.csproj" />
-  </ItemGroup>
+				<!-- ✅ مكتبة معالجة الأخطاء الصحيحة -->
+				<PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer" Version="8.1.3" />
+
+				<!-- AutoMapper -->
+				<PackageReference Include="AutoMapper" Version="12.0.1" />
+				<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+
+				<!-- Serilog -->
+				<PackageReference Include="Serilog" Version="4.0.2" />
+				<PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+				<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+				<PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+
+				<!-- ASP.NET Core HTTP -->
+				<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+				<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
+				<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
+				<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.10" />
+				<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+				<PackageReference Include="Stripe.net" Version="49.0.0" />
+
+
+		</ItemGroup>
+
+		<ItemGroup>
+				<!-- References to other layers -->
+				<ProjectReference Include="..\ECommerceApp.Application\ECommerceApp.Application.csproj" />
+				<ProjectReference Include="..\ECommerceApp.Domain\ECommerceApp.Domain.csproj" />
+		</ItemGroup>
 
 </Project>
